# learn_fastapi_by_guids

./: db.sqlite3  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/versions/: 32a2849a0bde_create_profile_table.py  919a37846330_create_users_table.py  9ba196a89b67_create_posts_table.py  f268ea457bc8_create_products_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixin.py  post.py  product.py  profile.py  user.py
users/: crud.py  views.py
